--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <div class="logo logo--header">GamesINC</div>
                         <div class="header__nav">
                             <div class="nav__row">
-                                <div class="nav__item"><a class="item__link-home" href="./index.html">Home</a></div>
-                                <div class="nav__item"><a class="item__link-games" href="./games.html">Games</a></div>
-                                <div class="nav__item"><a class="item__link-about" href="./about_us.html">About us</a>
+                                <div class="nav__item"><a class="item__link-home" href="#">Home</a></div>
+                                <div class="nav__item"><a class="item__link-games" href="#">Games</a></div>
+                                <div class="nav__item"><a class="item__link-about" href="#">About us</a>
                                 </div>
                             </div>
                         </div>
@@ -49,11 +49,11 @@
             <div class="mobile__row">
                 <div class="mobile__header"></div>
                 <div class="mobile__nav">
-                    <div class="nav__item nav__item--mobile"><a class="item__m-link-home" href="./index.html">Home</a>
+                    <div class="nav__item nav__item--mobile"><a class="item__m-link-home" href="#">Home</a>
                     </div>
-                    <div class="nav__item nav__item--mobile"><a class="item__m-link-games" href="./games.html">Games</a>
+                    <div class="nav__item nav__item--mobile"><a class="item__m-link-games" href="#">Games</a>
                     </div>
-                    <div class="nav__item nav__item--mobile"><a class="item__m-link-about" href="./about_us.html">About
+                    <div class="nav__item nav__item--mobile"><a class="item__m-link-about" href="#">About
                             us</a>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                             <div class="input__title input__title--textarea">briefly describe your game</div>
                             <textarea class="input__field input__field--textarea" maxlength="300"></textarea>
                         </div>
-                        <button class="button button--modal" type="submit">Send </button>
+                        <button class="button button--modal" type="submit"><a href="./index.html">Send</a></button>
                     </form>
                 </div>
             </div>
