--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <div class="input__title input__title--textarea">briefly describe your game</div>
                             <textarea class="input__field input__field--textarea" maxlength="300"></textarea>
                         </div>
-                        <button class="button button--modal">Send</button>
+                        <div class="button button--modal">Send</div>
                     </form>
                 </div>
             </div>
