--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                         <div class="header__nav">
                             <div class="nav__row">
                                 <div class="nav__item"><a class="item__link-home" href="./index.html">Home</a></div>
-                                <div class="nav__item"><a class="item__link-games" href="./games.html">Games</a></div>
-                                <div class="nav__item"><a class="item__link-about" href="./about_us.html">About us</a>
+                                <div class="nav__item"><a class="item__link-games" href="./html/games.html">Games</a>
+                                </div>
+                                <div class="nav__item"><a class="item__link-about" href="./html/about_us.html">About
+                                        us</a>
                                 </div>
                             </div>
                         </div>
@@ -51,9 +53,11 @@
                 <div class="mobile__nav">
                     <div class="nav__item nav__item--mobile"><a class="item__m-link-home" href="./index.html">Home</a>
                     </div>
-                    <div class="nav__item nav__item--mobile"><a class="item__m-link-games" href="./games.html">Games</a>
+                    <div class="nav__item nav__item--mobile"><a class="item__m-link-games"
+                            href="./html/games.html">Games</a>
                     </div>
-                    <div class="nav__item nav__item--mobile"><a class="item__m-link-about" href="./about_us.html">About
+                    <div class="nav__item nav__item--mobile"><a class="item__m-link-about"
+                            href="./html/about_us.html">About
                             us</a>
                     </div>
                 </div>
