--- a/html/about_us.html
+++ b/html/about_us.html
@@ -28,7 +28,7 @@
 						<div class="header__nav">
 							<div class="nav__row">
 								<div class="nav__item"><a class="item__link-home" href="../index.html">Home</a></div>
-								<div class="nav__item"><a class="item__link-games" href=".games.html">Games</a></div>
+								<div class="nav__item"><a class="item__link-games" href="./games.html">Games</a></div>
 								<div class="nav__item"><a class="item__link-about" href="./about_us.html">About us</a></div>
 							</div>
 						</div>
