--- a/html/about_us.html
+++ b/html/about_us.html
@@ -67,7 +67,7 @@
 							<div class="about-us__row">
 								<div class="about-us__item about-us__item--andrew">
 									<picture class="about-us__profile">
-										<img class="about-us__profile-image" src="../img/andrew.webp">
+										<img class="lozad about-us__profile-image" data-src="../img/andrew.webp">
 									</picture>
 									<div class="about-us__title about-us__title--andrew">Andrew. Responsible for the development of the
 										client side of the site.
@@ -75,21 +75,21 @@
 								</div>
 								<div class="about-us__item about-us__item--oleg">
 									<picture class="about-us__profile">
-										<img class="about-us__profile-image" src="../img/oleg.webp">
+										<img class="lozad about-us__profile-image" data-src="../img/oleg.webp">
 									</picture>
 									<div class="about-us__title  about-us__title--oleg">Oleg. Server side developer and responsible for
 										game development</div>
 								</div>
 								<div class="about-us__item about-us__item--artem">
 									<picture class="about-us__profile">
-										<img class="about-us__profile-image" src="../img/artem.webp">
+										<img class="lozad about-us__profile-image" data-src="../img/artem.webp">
 									</picture>
 									<div class="about-us__title  about-us__title--artem">Artyom. Andrey's assistant, designer responsible
 										for the look and feel of our website and games</div>
 								</div>
 								<div class="about-us__item about-us__item--maxim">
 									<picture class="about-us__profile">
-										<img class="about-us__profile-image" src="../img/maxim.webp">
+										<img class="lozad about-us__profile-image" data-src="../img/maxim.webp">
 									</picture>
 									<div class="about-us__title  about-us__title--maxim">Maksim. He is the person responsible for the SEO
 										and optimization of our website on the Internet. Also responsible for
@@ -97,14 +97,14 @@
 								</div>
 								<div class="about-us__item about-us__item--igor">
 									<picture class="about-us__profile">
-										<img class="about-us__profile-image" src="../img/igor.webp">
+										<img class="lozad about-us__profile-image" data-src="../img/igor.webp">
 									</picture>
 									<div class="about-us__title  about-us__title--igor">Igor. QA leader in our team. Responsible for
 										testing games and website for various bugs and shortcomings</div>
 								</div>
 								<div class="about-us__item about-us__item--stas">
 									<picture class="about-us__profile">
-										<img class="about-us__profile-image" src="../img/stas.webp">
+										<img class="lozad about-us__profile-image" data-src="../img/stas.webp">
 									</picture>
 									<div class="about-us__title  about-us__title--stas">Stas. QA. Igor's assistant. Responsible for
 										testing the front-end and back-end of the website</div>
@@ -204,5 +204,7 @@
 </body>
 <script src='../script/lang_about-us.js'></script>
 <script src='../script/burger.js'></script>
+<script src='../script/lozad.js'></script>
+<script src='../script/lozad-init.js'></script>
 
 </html>
