--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                                         we can carry out quality control of your game. We guarantee you fast
                                         and high-quality testing</div>
                                     <picture class="add-game__arrow">
-                                        <img class="arrow__img" src="./img/arrow.webp" alt="arrow">
+                                        <img class="lozad arrow__img" data-src="./img/arrow.webp" alt="arrow">
                                     </picture>
                                     <div id="pop-up__btn" class="button button--add-game">Send a request</div>
                                 </div>
@@ -173,8 +173,8 @@
                                             <div class="blog__item">
                                                 <a href="#">
                                                     <picture class="blog__preview">
-                                                        <img class="blog__preview-img" src="./img/first_blog.webp"
-                                                            alt="last_new">
+                                                        <img class="lozad blog__preview-img"
+                                                            data-src="./img/first_blog.webp" alt="last_new">
                                                     </picture>
                                                 </a>
                                                 <div class="blog__title blog__title--site">We've updated our
@@ -186,8 +186,8 @@
                                             <div class="blog__item">
                                                 <a href="#">
                                                     <picture class="blog__preview">
-                                                        <img class="blog__preview-img" src="./img/second_blog.webp"
-                                                            alt="second_new">
+                                                        <img class="lozad blog__preview-img"
+                                                            data-src="./img/second_blog.webp" alt="second_new">
                                                     </picture>
                                                 </a>
                                                 <div class="blog__title blog__title--snake">We've finished
@@ -201,8 +201,8 @@
                                             <div class="blog__item">
                                                 <a href="#">
                                                     <picture class="blog__preview">
-                                                        <img class="blog__preview-img" src="./img/third_blog.webp"
-                                                            alt="third_new">
+                                                        <img class="lozad blog__preview-img"
+                                                            data-src="./img/third_blog.webp" alt="third_new">
                                                     </picture>
                                                 </a>
                                                 <div class="blog__title blog__title--bounce">We are pleased to inform
@@ -215,8 +215,8 @@
                                             <div class="blog__item">
                                                 <a href="#">
                                                     <picture class="blog__preview">
-                                                        <img class="blog__preview-img" src="./img/fourth_blog.webp"
-                                                            alt="fourth_new">
+                                                        <img class="lozad blog__preview-img"
+                                                            data-src="./img/fourth_blog.webp" alt="fourth_new">
                                                     </picture>
                                                 </a>
                                                 <div class="blog__title blog__title--aim">Good day, readers. We are
@@ -330,5 +330,7 @@
 <script src='./script/pop-up.js'></script>
 <script src='./script/lang_main.js'></script>
 <script src='./script/burger.js'></script>
+<script src='./script/lozad.js'></script>
+<script src='./script/lozad-init.js'></script>
 
 </html>
